--- a/roles/etcd/tasks/main.yml
+++ b/roles/etcd/tasks/main.yml
@@ -2,10 +2,9 @@
   yum:
     name=etcd
     state=present
-    
-- name: Install etcd for Python
-  pip:
-    name=python-etcd
+
+# TODO: this is a hack, since the configuration is not properly documented in
+# the tendrl upstream
 
 - name: Directory for etcd api_jobs
   file:
@@ -30,7 +29,7 @@
     regexp="^(\#*)ETCD_ADVERTISE_CLIENT_URLS(.*)"
     line="ETCD_ADVERTISE_CLIENT_URLS=\"http://{{ inventory_hostname }}:2379\""
 
-- name: Run etcd
+- name: Start etcd
   service:
     name=etcd
     state=started
