polish roles according to new specification

--- a/roles/tendrl-bridge-common/tasks/main.yml
+++ b/roles/tendrl-bridge-common/tasks/main.yml
@@ -1,8 +1,12 @@
-- include: virtualenv.yml
-  when: virtualenv_path is defined
+#
+# installation
+#
 
-- include: nonvirtualenv.yml
-  when: not virtualenv_path
+- include: source.yml
+  when: use_source
+
+- include: binary.yml
+  when: not use_source
 
 - name: Directory for Tendrl conf
   file:
@@ -25,4 +29,9 @@
     regexp="^(\#*)etcd_connection = (.*)"
     line="etcd_connection = \"{{ hostvars[groups['usm_server'][0]]['ansible_eth0']['ipv4']['address'] }}:2379\""
     
+#
+# post installation configuration
+#
 
+# TODO: move some configuration there when the documentation is clear and when
+# the rpm packages are available
