--- a/roles/tendrl-ceph-bridge/tasks/main.yml
+++ b/roles/tendrl-ceph-bridge/tasks/main.yml
@@ -1,5 +1,16 @@
-- include: virtualenv.yml
-  when: virtualenv_path is defined
+#
+# installation
+#
 
-- include: nonvirtualenv.yml
-  when: not virtualenv_path   
+- include: source.yml
+  when: use_source
+
+- include: binary.yml
+  when: not use_source
+
+#
+# post installation configuration
+#
+
+# TODO: move some configuration there when the documentation is clear and when
+# the rpm packages are available
