--- a/roles/tendrl-gluster-bridge/defaults/main.yml
+++ b/roles/tendrl-gluster-bridge/defaults/main.yml
@@ -1,2 +1,8 @@
 ---
-virtualenv_path: /opt/virtualenvs/tendrl
+# when true, tendrl-api is installed from a source repository
+use_source: false
+# url of the source repository and the branch to checkout
+tendrl_gluster_bridge_repo_url: git://github.com/shtripat/gluster_bridge.git
+tendrl_gluster_bridge_repo_branch: vol-operations
+# path where will be stored virtualenv
+virtualenv_path: /opt/tendrl/virtualenv
