--- a/roles/tendrl-node-agent/defaults/main.yml
+++ b/roles/tendrl-node-agent/defaults/main.yml
@@ -1,2 +1,8 @@
 ---
-virtualenv_path: /opt/virtualenvs/tendrl
+# when true, tendrl-api is installed from a source repository
+use_source: false
+# url of the source repository and the branch to checkout
+tendrl_node_agent_repo_url: 'git+https://github.com/Tendrl/node_agent#egg=node_agent'
+tendrl_node_agent_repo_branch: master
+# path where will be stored virtualenv
+virtualenv_path: /opt/tendrl/virtualenv
