corrected gluster_bridge installation command

--- a/roles/tendrl-gluster-bridge/tasks/source.yml
+++ b/roles/tendrl-gluster-bridge/tasks/source.yml
@@ -16,6 +16,5 @@
 
 - name: Install gluster_bridge into virtualenv
   pip:
-    name=
-    chdir={{ gluster_bridge_path }}
+    name={{ gluster_bridge_path }}
     virtualenv="{{ virtualenv_path }}"
