--- a/roles/tendrl-gluster-bridge/defaults/main.yml
+++ b/roles/tendrl-gluster-bridge/defaults/main.yml
@@ -3,6 +3,6 @@
 use_source: false
 # url of the source repository and the branch to checkout
 tendrl_gluster_bridge_repo_url: git://github.com/shtripat/gluster_bridge.git
-tendrl_gluster_bridge_repo_branch: vol-operations
+tendrl_gluster_bridge_repo_branch: master
 # path where will be stored virtualenv
 virtualenv_path: /opt/tendrl/virtualenv
