--- a/roles/tendrl-bridge-common/files/tendrl.conf
+++ b/roles/tendrl-bridge-common/files/tendrl.conf
@@ -11,6 +11,12 @@ log_path = /var/log/tendrl/bridge_common.log
 log_level = DEBUG
 
 
+[tendrl_node_agent]
+# Path to log file
+log_path = /var/log/tendrl/tendrl_node_agent.log
+log_level = DEBUG
+
+
 [gluster_bridge]
 # Path to log file
 log_path = /var/log/tendrl/gluster_bridge.log
