--- a/roles/tendrl-gluster-bridge/defaults/main.yml
+++ b/roles/tendrl-gluster-bridge/defaults/main.yml
@@ -4,5 +4,6 @@ use_source: false
 # url of the source repository and the branch to checkout
 tendrl_gluster_bridge_repo_url: git://github.com/shtripat/gluster_bridge.git
 tendrl_gluster_bridge_repo_branch: master
+tendrl_gluster_bridge_path: /opt/tendrl/gluster_bridge
 # path where will be stored virtualenv
 virtualenv_path: /opt/tendrl/virtualenv
