--- a/qe_tendrl.yml
+++ b/qe_tendrl.yml
@@ -3,18 +3,16 @@
   remote_user: root
   vars:
     use_source: true
-    api_path: /opt/tendrl/tendrl
   roles:
     - tendrl-devel
     - etcd
-    - tendrl-tendrl
+    - tendrl-api
 
 - hosts: gluster
   remote_user: root
   vars:
     use_source: true
-    gluster_bridge_path: /opt/tendrl/gluster_bridge
-    tendrl_gluster_bridge_repo_branch: vol-operations
+#    tendrl_gluster_bridge_repo_branch: vol-operations
   roles:
     - tendrl-devel
     - gluster
