--- a/roles/tendrl-gluster-bridge/tasks/source.yml
+++ b/roles/tendrl-gluster-bridge/tasks/source.yml
@@ -1,12 +1,12 @@
 - name: Directory for gluster_bridge
   file:
-    path="{{ gluster_bridge_path }}"
+    path="{{ tendrl_gluster_bridge_path }}"
     state=directory
 
 - name: Clone gluster_bridge
   git:
     repo={{ tendrl_gluster_bridge_repo_url }}
-    dest={{ gluster_bridge_path }}
+    dest={{ tendrl_gluster_bridge_path }}
     version={{ tendrl_gluster_bridge_repo_branch }}
 
 - name: Directory for Tendrl virtualenv
@@ -16,5 +16,5 @@
 
 - name: Install gluster_bridge into virtualenv
   pip:
-    name={{ gluster_bridge_path }}
+    name={{ tendrl_gluster_bridge_path }}
     virtualenv="{{ virtualenv_path }}"
