--- a/roles/tendrl-node-agent/tasks/source.yml
+++ b/roles/tendrl-node-agent/tasks/source.yml
@@ -3,7 +3,36 @@
     path="{{ virtualenv_path }}"
     state=directory
 
+- name: Clone tendrl.git
+  git:
+    repo={{ tendrl_node_agent_repo_url }}
+    dest={{ tendrl_node_agent_path }}
+
+# TODO: Uncomment when there will be sample configs
+#- name: Create bridge_common logging config file
+#  shell: cp -r {{ tendrl_node_agent_path }}/etc/samples/logging.yaml.timedrotation.sample /etc/tendrl/common_logging.yaml
+
+#- name: Create bridge_common logging config file
+#  shell: cp -r {{ tendrl_node_agent_path }}/etc/samples/logging.yaml.timedrotation.sample /etc/tendrl/node_agent_logging.yaml
+
+# TODO: Find proper way how to install those prerequisities not mentioned in documentation
+- name: Install dependencies
+  yum:
+    name={{ item }}
+    state=present
+  with_items:
+    - libffi 
+    - libffi-devel
+    - openssl
+    - openssl-devel
+
+- name: Create directory for logging 
+  file:
+    path=/var/log/tendrl/common/node_agent
+    state=directory
+
 - name: Install node_agent into virtualenv
   pip:
-    name={{ tendrl_node_agent_repo_url }}
+    name=.
     virtualenv="{{ virtualenv_path }}"
+    chdir="{{ tendrl_node_agent_path }}"
