correct tendrl.conf, rename variables, rename qe_tendrl.yml

--- a/roles/tendrl-common/files/tendrl.conf
+++ b/roles/tendrl-common/files/tendrl.conf
@@ -1,29 +1,33 @@
-[bridge_common]
+[common]
 
 # Central store etcd port
 etcd_port = 2379
 
 # Central store etcd host/ip
-etcd_connection = 127.0.0.1
+etcd_connection = 0.0.0.0
 
 # Path to log file
-log_path = /var/log/tendrl/bridge_common.log
 log_level = DEBUG
+log_cfg_path = /etc/tendrl/common_logging.yaml
 
 [node_agent]
-# Path to the log file and log level
-log_cfg_path = /etc/tendrl/node_agent_logging.yaml
+# Path to log file
 log_level = DEBUG
 tendrl_exe_file_prefix = /tmp/.tendrl_runner
+log_cfg_path = /etc/tendrl/node_agent_logging.yaml
 
-
-[gluster_bridge]
+[gluster_integration]
 # Path to log file
-log_path = /var/log/tendrl/gluster_bridge.log
 log_level = DEBUG
+log_cfg_path = /etc/tendrl/gluster_integration_logging.yaml
 
-
-[ceph_bridge]
+[ceph_integration]
 # Path to log file
-log_path = /var/log/tendrl/ceph_bridge.log
+log_cfg_path = /etc/tendrl/ceph_integration_logging.yaml
 log_level = DEBUG
+crush_host_type = host
+crush_osd_type = osd
+favorite_timeout_factor = 3
+server_timeout_factor = 3
+cluster_contact_threshold = 60
+cluster_map_retention = 3600
