--- a/roles/tendrl-common/defaults/main.yml
+++ b/roles/tendrl-common/defaults/main.yml
@@ -2,7 +2,7 @@
 # when true, tendrl-api is installed from a source repository
 use_source: false
 # url of the source repository and the branch to checkout
-tendrl_bridge_common_repo_url: 'git+https://github.com/Tendrl/common#egg=common'
-tendrl_bridge_common_repo_branch: master
+tendrl_common_repo_url: 'git+https://github.com/Tendrl/common#egg=common'
+tendrl_common_repo_branch: master
 # path where will be stored virtualenv
 virtualenv_path: /opt/tendrl/virtualenv
