add installation via packages

--- a/roles/tendrl-api/tasks/binary.yml
+++ b/roles/tendrl-api/tasks/binary.yml
@@ -1,4 +1,23 @@
-- name: Binary builds are not avaiable
-  assert:
-    that:
-      - false
+- name: Install tendrl-api dependencies
+  yum:
+    name={{ item }}
+    state=present
+    validate_certs=no
+  with_items:
+    - epel-release
+    - systemd-units
+
+- name: Install tendrl-api without allowed epel
+  yum:
+    name=tendrl-api
+    state=latest
+  when:
+    not use_epel
+    
+- name: Install tendrl-api with allowed epel
+  yum:
+    name=tendrl-api
+    state=latest
+    enablerepo=epel
+  when:
+    use_epel
