--- a/roles/etcd/tasks/main.yml
+++ b/roles/etcd/tasks/main.yml
@@ -29,8 +29,7 @@
     regexp="^(\#*)ETCD_ADVERTISE_CLIENT_URLS(.*)"
     line="ETCD_ADVERTISE_CLIENT_URLS=\"http://{{ inventory_hostname }}:2379\""
 
-- name: Start and enable etcd
+- name: Start etcd
   service:
     name=etcd
     state=started
-    enabled=yes
