--- a/roles/tendrl-frontend/defaults/main.yml
+++ b/roles/tendrl-frontend/defaults/main.yml
@@ -1,6 +1,8 @@
 ---
 # when true, tendrl-frontend is installed from a source repository
 use_source: false
+# when true, tendrl-frontend is installed with EPEL7 support
+use_epel: false
 # url of the source repository and the branch to checkout
 # e.g. tendrl_frontend_repo_url: git://github.com/Tendrl/tendrl.git
 tendrl_frontend_repo_url: git://github.com/Tendrl/tendrl_frontend.git
