--- a/roles/gluster/tasks/main.yml
+++ b/roles/gluster/tasks/main.yml
@@ -2,7 +2,7 @@
   yum_repository:
     name: gluster
     description: Gluster EPEL YUM repo
-    baseurl: http://buildlogs.centos.org/centos/7/storage/x86_64/gluster-3.9
+    baseurl: {{ gluster_repo_url }}
 
 - name: Install GlusterFS
   yum:
@@ -23,7 +23,7 @@
     - glusterfs-libs
     - userspace-rcu
     - glusterfs-cli
-#    - glusterfs-events
+    - glusterfs-events
     - glusterfs-rdma
     - glusterfs-client-xlators
     - glusterfs-extra-xlators
