fix configuration for packages, different tendrl-devel packages for installation from packages and from sources

--- a/roles/gluster/tasks/main.yml
+++ b/roles/gluster/tasks/main.yml
@@ -27,6 +27,7 @@
     - glusterfs-rdma
     - glusterfs-client-xlators
     - glusterfs-extra-xlators
+    - glusterfs-geo-replication
 
 - name: Run glusterd service
   service:
