--- a/roles/tendrl-node-agent/tasks/binary.yml
+++ b/roles/tendrl-node-agent/tasks/binary.yml
@@ -5,17 +5,8 @@
   with_items:
     - python2-devel
 
-- name: Install tendrl-node-agent without allowed epel
+- name: Install tendrl-node-agent
   yum:
     name=tendrl-node-agent
     state=latest
-  when:
-    not use_epel
-    
-- name: Install tendrl-node-agent with allowed epel
-  yum:
-    name=tendrl-node-agent
-    state=latest
-    enablerepo=epel
-  when:
-    use_epel
+    enablerepo="{{ enable_repo }}"
