--- a/roles/tendrl-api/defaults/main.yml
+++ b/roles/tendrl-api/defaults/main.yml
@@ -1,8 +1,8 @@
 ---
 # when true, tendrl-api is installed from a source repository
 use_source: false
-# when true, tendrl-api is installed with EPEL7 support
-use_epel: false
+# when specified, tendrl-api is installed with provided repo support
+enable_repo: None
 # url of the source repository and the branch to checkout
 # e.g. tendrl_api_repo_url: git://github.com/Tendrl/tendrl.git
 tendrl_api_repo_url: https://github.com/Tendrl/tendrl-api.git
