--- a/roles/tendrl-api/tasks/main.yml
+++ b/roles/tendrl-api/tasks/main.yml
@@ -12,5 +12,4 @@
 # post installation configuration
 #
 
-# TODO: move some configuration there when the documentation is clear and when
-# the rpm packages are available
+# TODO: move some configuration there when the documentation is clear
