--- a/roles/tendrl-devel/tasks/main.yml
+++ b/roles/tendrl-devel/tasks/main.yml
@@ -1,28 +1,22 @@
-- name: Install dependencies without allowed epel
+- name: Install dependencies for installation from packages
   yum:
     name={{ item }}
   with_items:
-#    - python-pip
-    - git
-#    - nodejs
-#    - npm
     - httpd
-    - python-devel
-    - gcc
-    - python-virtualenv
   when:
     not use_source
 
-- name: Install dependencies with allowed epel
+- name: Install dependencies for installation from sources
   yum:
     name={{ item }}
+    enablerepo=epel
   with_items:
-    - python-pip
     - git
     - nodejs
     - npm
     - httpd
     - python-devel
+    - python-pip
     - gcc
     - python-virtualenv
   when:
