--- a/roles/tendrl-devel/defaults/main.yml
+++ b/roles/tendrl-devel/defaults/main.yml
@@ -1,3 +1,3 @@
 ---
 # when true, tendrl-devel packages are installed with EPEL7 support because of availability of nodejs and npm
-use_source: false
+install_from: packages
