--- a/roles/tendrl-devel/tasks/main.yml
+++ b/roles/tendrl-devel/tasks/main.yml
@@ -3,8 +3,7 @@
     name={{ item }}
   with_items:
     - httpd
-  when:
-    not use_source
+  when: install_from == "packages"
 
 - name: Install dependencies for installation from sources
   yum:
@@ -19,5 +18,4 @@
     - python-pip
     - gcc
     - python-virtualenv
-  when:
-    use_source
+  when: install_from == "source"
