start node-agent and gluster-integration services when installed from packages

--- a/roles/tendrl-gluster-integration/tasks/binary.yml
+++ b/roles/tendrl-gluster-integration/tasks/binary.yml
@@ -3,3 +3,8 @@
     name=tendrl-gluster-integration
     state=latest
     enablerepo="{{ enable_repo }}"
+
+- name: Start tendrl-gluster-integration
+  service:
+    name=tendrl-glusterd
+    state=started
