rename gluster role on gluster-centos

--- a/tendrl.yml
+++ b/tendrl.yml
@@ -18,7 +18,7 @@
     enable_repo: epel
   roles:
     - tendrl-devel
-    - gluster
+    - gluster-centos
     - tendrl-repo
     - tendrl-common
     - tendrl-node-agent
