--- a/roles/tendrl-repo/tasks/main.yml
+++ b/roles/tendrl-repo/tasks/main.yml
@@ -2,7 +2,7 @@
   yum_repository:
     name: tendrl
     description: Tendrl EPEL YUM repo
-    baseurl: "https://copr.fedorainfracloud.org/coprs/tendrl/tendrl/repo/epel-7/tendrl-tendrl-epel-7.repo"
+    baseurl: "https://copr-be.cloud.fedoraproject.org/results/tendrl/tendrl/epel-7-x86_64/"
 
 - name: Add public key
   rpm_key:
