role qe-gluster-peers: update comment

--- a/roles/qe-gluster-peers/tasks/main.yml
+++ b/roles/qe-gluster-peers/tasks/main.yml
@@ -1,4 +1,7 @@
 ---
+#
+# Create gluster cluster (gluster peer probe)
+#
 # variable gluster_nodes contains list of gluster peers,
 # by defaults contains list of hosts from group gluster
 #
