--- a/roles/qe-server/tasks/main.yml
+++ b/roles/qe-server/tasks/main.yml
@@ -30,6 +30,13 @@
     option=forks
     value=50
 
+- name: Configure ansible host_key_checking option
+  ini_file:
+    dest=/etc/ansible/ansible.cfg
+    section=defaults
+    option=host_key_checking
+    value=False
+
 # Required to overcome ssh control path socket errors for very long hostnames.
 - name: Configure ansible control_path
   ini_file:
