--- a/qe_gluster_firewall.yml
+++ b/qe_gluster_firewall.yml
@@ -6,6 +6,7 @@
   remote_user: root
   tasks:
   - name: stop firewall
-    name: firewalld
-    state: stopped
-    enabled: no
+    service:
+      name: firewalld
+      state: stopped
+      enabled: no
