firewalld workaround: ignore errors when disabling firewall

--- a/qe_gluster_firewall.yml
+++ b/qe_gluster_firewall.yml
@@ -10,6 +10,7 @@
       name: firewalld
       state: stopped
       enabled: no
+    ignore_errors: yes
   - name: pause for 10 second
     pause:
       seconds: 10
